log
Thu 16 May 2024 05:10:40 PM UTC: 
 tests:  0|5
total_score: 0/70
e71e0c4
Thu 16 May 2024 05:37:40 PM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4987197
Thu 16 May 2024 05:38:38 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|4
total_score: 15/70
9d9ee44
Thu 16 May 2024 05:39:34 PM UTC: 
 sudoku.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
f443893
Thu 16 May 2024 05:39:53 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
d3af3c4
Thu 16 May 2024 05:39:59 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
90464ec
Thu 16 May 2024 05:40:33 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
8b4c14a
Thu 16 May 2024 05:41:08 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
31ca71a
Thu 16 May 2024 05:41:17 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
6a74c9a
Thu 16 May 2024 05:41:58 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
d034dcb
Thu 16 May 2024 05:42:21 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7e9d40e
Thu 16 May 2024 05:42:27 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
864eb1e
Thu 16 May 2024 05:42:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
03fa971
Thu 16 May 2024 05:42:49 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:70:13: error: ‘else’ without a previous ‘if’
   70 |             else
      |             ^~~~
Compilation failed
dca1396
Thu 16 May 2024 05:42:54 PM UTC: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|5
total_score: 0/70
d4fb3cd
Thu 16 May 2024 05:43:09 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f2e990c
Thu 16 May 2024 05:43:16 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
62a2c61
Thu 16 May 2024 05:43:47 PM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|5
total_score: 0/70
e9f7423
Thu 16 May 2024 05:43:56 PM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|5
total_score: 0/70
b2b9f13
Thu 16 May 2024 05:44:00 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
c9429d0
Thu 16 May 2024 05:44:11 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
1cb7eb7
Thu 16 May 2024 05:44:36 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|4
total_score: 15/70
2537a62
Thu 16 May 2024 05:44:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
b1bbc2b
Thu 16 May 2024 05:44:55 PM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|4
total_score: 15/70
3718c0d
Thu 16 May 2024 05:45:10 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b6df306
Thu 16 May 2024 05:45:35 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4a6fa89
Thu 16 May 2024 05:46:01 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
3a4546b
Thu 16 May 2024 05:46:11 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
0b86df3
Thu 16 May 2024 05:46:17 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2135703
Thu 16 May 2024 05:46:34 PM UTC: 
 sudoku.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
 tests:  0|5
total_score: 0/70
6e41e24
Thu 16 May 2024 05:46:50 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7eb492f
Thu 16 May 2024 05:50:23 PM UTC: 
 sudoku.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:69:28: error: implicit declaration of function ‘insertLast’ [-Werror=implicit-function-declaration]
   69 |                            insertLast(list,adj);
      |                            ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0328cd3
Thu 16 May 2024 05:50:58 PM UTC: 
 sudoku.c | 24 ++----------------------
 1 file changed, 2 insertions(+), 22 deletions(-)
 tests:  0|5
total_score: 0/70
4ebf193
Thu 16 May 2024 05:51:44 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|5
total_score: 0/70
d697d8e
Thu 16 May 2024 05:51:59 PM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:32: error: ‘k’ may be used uninitialized [-Werror=maybe-uninitialized]
   64 |                adj->sudo[i][j] = k;
      |                ~~~~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
e83833e
Thu 16 May 2024 05:55:08 PM UTC: 
 sudoku.c | 16 +++-------------
 1 file changed, 3 insertions(+), 13 deletions(-)
 tests:  0|5
total_score: 0/70
4232747
Thu 16 May 2024 05:55:46 PM UTC: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
bd8071a
Thu 16 May 2024 05:55:54 PM UTC: 
 sudoku.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  0|5
total_score: 0/70
b237c29
Thu 16 May 2024 05:58:19 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|4
total_score: 15/70
1af9a55
Thu 16 May 2024 06:01:58 PM UTC: 
 sudoku.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
520e968
Thu 16 May 2024 06:02:08 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3e86d18
Thu 16 May 2024 06:02:50 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|4
total_score: 15/70
f90efa3
Thu 16 May 2024 06:06:18 PM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
87c4589
Thu 16 May 2024 06:07:21 PM UTC: 
 sudoku.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
6901e68
Thu 16 May 2024 06:07:51 PM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|5
total_score: 0/70
5158cec
Thu 16 May 2024 06:07:59 PM UTC: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  2|4
total_score: 15/70
dc90288
Thu 16 May 2024 06:09:19 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
01ac350
Thu 16 May 2024 06:22:47 PM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:12: error: unused variable ‘k’ [-Werror=unused-variable]
   49 |    int i,j,k;
      |            ^
cc1: all warnings being treated as errors
Compilation failed
4a30bfc
Thu 16 May 2024 06:24:15 PM UTC: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:12: error: unused variable ‘k’ [-Werror=unused-variable]
   49 |    int i,j,k;
      |            ^
cc1: all warnings being treated as errors
Compilation failed
461a142
Thu 16 May 2024 06:29:41 PM UTC: 
 sudoku.c | 67 ++++++++++++++++++++++++++++++++--------------------------------
 1 file changed, 34 insertions(+), 33 deletions(-)
 tests:  5|3
total_score: 35/70
bed2c03
Thu 16 May 2024 06:33:45 PM UTC: 
 sudoku.c | 30 +++++++++++++++---------------
 1 file changed, 15 insertions(+), 15 deletions(-)
 tests:  5|3
total_score: 35/70
ee4cd1b
Thu 16 May 2024 06:42:14 PM UTC: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
135cadd
Thu 16 May 2024 06:42:44 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
4c74166
Thu 16 May 2024 06:51:51 PM UTC: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
2c3c156
Thu 16 May 2024 06:57:09 PM UTC: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|0
39ebb5f
